# ycj-blog-code

./: .clang-format  .clangd  .gitignore  CLAUDE.md  CODING_STYLE.md  README.md
async_memcpy_benchmark/: CLAUDE.md  CMakeLists.txt  CODING_STYLE.md  README.md
batch_scalability/: Makefile  compile_commands.json  data.cu  data.cuh  main.cu  method_cpu.cu  method_gpu.cu  method_gpu_naive.cu  methods.cuh  run.sh  util.cuh
bf16_vs_fp32/: Makefile  core.cu  core.cuh  log_col_major.txt  log_row_major.txt  main.cu  util.cu
bid_aware_ann_post_filtering/: Makefile  common.cuh  config.cuh  data_struct.cuh  data_synthesizer.cuh  eval.cuh  main.cu  misc.cuh  post_gpu.cu  post_gpu.cuh  pre_cpu.cuh  pre_gpu.cu  pre_gpu.cuh  test_data_synthesizer.cu  topk.cuh  topk_with_bucket_sort.cu
bid_aware_ann_with_filtering/: data_synthesizer.cuh  eval.cuh  topk.cuh
big_batch_ebr_with_quantization/: Makefile  README.md  abm_data_struct.cuh  common.cuh  emb.cuh  emb_data_struct.cu  emb_data_struct.cuh  emb_mask_op.cu  emb_op.cu  emb_op.cuh  quant.cuh  quant_data_struct.cu  quant_data_struct.cuh  quant_op.cu  quant_op.cuh  run.sh  test_emb_mask_op.cu  test_emb_op.cu  test_quant_op.cu  test_topk.cu  topk.cuh  topk_baseline.cu  topk_with_sampling.cu
cabm/: CMakeLists.txt  cabm.cu  cabm.cuh  cabm_common.cu  cabm_cpu.cu  cabm_gpu.cu  data_struct.cu  data_struct.cuh  macro.cuh  run.sh  test1.cu  test2.cu  test3.cu
col_encoder/: Makefile  col_enc_cpu.cuh  col_enc_gpu.cuh  col_encoder_cpu.cuh  col_encoder_gpu.cuh  data_cvt.cuh  data_gen.cuh  data_struct.cuh  main.cu
compressible_embeddings/: CMakeLists.txt  run.sh  test_compressible_embeddings_t4  test_compressible_embeddings_t4_v2  test_compressible_embeddings_t4_v3  test_compressible_embeddings_t4_v4  todo.txt
concurrent_read_write_paradigm/: CMakeLists.txt  README.md  run.sh
cudaMallocManaged/: Makefile  log.txt  main.cu  util.cu  util.cuh
cuda_malloc_raii/: CMakeLists.txt  cuda_malloc_raii.cuh  main.cu  run.sh
cusparseSDDMM/: Makefile  baseline.cu  common.cuh  main.cu  methods.cuh  sddmm_csr_example.c
embedding_quantization/: CMakeLists.txt  README.md  log.txt  run.sh
ffm/: Makefile  data_cvt.cuh  data_gen.cuh  data_struct.cuh  ffm_gpu.cuh  main.cu
gemm/: README.md  data.cuh  log.txt  main.cu  method_dot_prod_cpu.cuh  method_dot_prod_gpu_cublas.cuh  method_dp_cpu.cuh  method_dp_gpu_cublas.cuh  method_dp_gpu_naive.cuh  method_mlp_cpu.cuh  method_mlp_gpu.cuh
h2d_copy_test/: CMakeLists.txt  main.cu  run.sh  tasks.cu  tasks.cuh  util.cuh
host_device_memcpy/: Makefile  common.cu  common.cuh  log.txt  main.cu  methods.cu  methods.cuh  util.cuh
is_in/: Makefile  baseline.cu  binary_search.cu  binary_search_plus.cu  common.cuh  main.cu  methods.cuh
java_block_c/: jni.cc
jni/: jni.cc  retrieval_engine_jni.cpp  run_jni.sh
jni_thread_creation/: com_jni_JniMain.h  core.h  dump.sh  jni.cc  log.txt  main.cc  run_jni.sh  util.h
kernel_function_call_overhead/: baseline.cu  log.txt  main.cu  methods.cuh  setup1.cu  setupA.cu  setupB.cu  setupB.cuh
kernel_if_else_overhead/: Makefile  common.cuh  kernel.cu  kernel.cuh  log.txt  main.cu
many_cuda_streams/: Makefile  log.txt  main.cu  util.cuh
masked_mat_mul/: common.cuh  main.cu
mat_mat_mul_from_scratch/: Makefile  compile_commands.json  data.cu  data.cuh  main.cu  method_cpu.cu  method_cublus.cu  method_gpu.cu  methods.cuh  run.sh  util.cuh
mutex_benchmark/: Makefile  log.txt  main.cpp  run.sh  timer.h
parallelization_with_cuda_stream/: CMakeLists.txt  log.txt  main.cu  run.sh  util.cuh
pytorch_inference_cpp/: .gitignore  README.md  clean.sh  export.py  run.sh
pytorch_inference_cpp/aotinductor/: CMakeLists.txt  main.cu
pytorch_inference_cpp/compare/: CMakeLists.txt  backend_aotinductor.cu  backend_cuda.cu  backend_onnxruntime.cpp  backend_onnxruntime.cu  backend_tensorrt.cpp  backend_tensorrt.cu  backend_torchscript.cpp  backend_torchscript.cu  backends.hpp  compile.sh  main.cpp  main.cu  run.sh
pytorch_inference_cpp/onnxruntime/: CMakeLists.txt  compile.sh  main.cpp  run.sh
pytorch_inference_cpp/tensorrt/: CMakeLists.txt  compile.sh  main.cpp
pytorch_inference_cpp/torchscript/: CMakeLists.txt  compile.sh  main.cpp  run.sh
qps_simulator/: Makefile  config.h  dispatcher.h  main.cpp  retriever.h
ram_disk_to_gpu_benchmark/: Makefile  common.cuh  log.txt  main.cu
random_sample/: Makefile  log.txt  main.cu
random_sample_partitioned_docs/: log.txt
read_byte_array/: Makefile  README  byte_array.cu
residual_quantization/: CMakeLists.txt  data.cu  data.cuh  log.txt  main.cu  methods.cu  methods.cuh  run.sh  unit_tests.cu
row_major_vs_col_major/: Makefile  row_vs_col.cu  util.h
row_major_vs_col_major_revisit_with_warp_primitives/: Makefile  main.cu  run.sh  timer.cuh
sddmm/: Makefile  baseline.cu  common.cuh  cusparse.cu  main.cu  methods.cuh  sddmm_csr_example.c  simpleTensorCoreGEMM.cu  tensor_simple.cu  test.cu  util.cuh
std_vector_at/: Makefile  main.cpp  util.h
tensor_core_quant/: Makefile  baseline.cu  baseline.cuh  common.cuh  main.cu  methods.cuh  simpleTensorCoreGEMM.cu  simpleTensorCoreGEMM_row_major.cu  tensor.cu  tensor_8x8.cu  tensor_min_change.cu  tensor_simple.cu  tensor_unroll.cu  tensor_unroll_v2.cu  tensor_v1.cu  tensor_v2.cu  tensor_v3.cu  tensor_v4.cu  tensor_v5.cu  tensor_v6.cu  tensor_v7.cu
thread_pool/: CMakeLists.txt  Makefile.threadpool  README.md  THREAD_POOL_README.md  ThreadPool.cpp  ThreadPool.h  log.txt  main.cpp  run.sh  simple_test.cpp  test_thread_pool.cu  thread_pool.cuh  thread_pool.h  thread_pool_example.cpp
thrust_custom_allocator/: Makefile  log.txt  run_default_thrust_sort  run_default_thrust_sort.cu  run_malloc  run_malloc.cu  run_thrust_sort_with_custom_allocator  run_thrust_sort_with_custom_allocator.cu  util.cuh
topk/: CMakeLists.txt  log.txt  (+6 more)
universal_buffer/: CMakeLists.txt  README.md  cuda_malloc_raii.cuh  main.cu  run.sh  todo
universal_buffer/src/: cuda_malloc_raii.cuh  universal_buffer.cuh
universal_buffer/test/: test_cuda_malloc_latency.cu  test_cuda_malloc_raii.cu  test_universal_buffer.cu
(+186 files in other folders)
